# testrusthash

./: .gitignore  pom.xml
.github/workflows/: macos_arm.yml
src/main/java/info/jerrinot/sandbox/rustyhashes/: HashingBenchmark.java  RustyCrypto.java  RustyHashMain.java  Utils.java
src/main/rust/hashing/: Cargo.toml
src/main/rust/hashing/src/: lib.rs
src/main/rust/hashing/src/hash/: hash.rs
src/test/java/info/jerrinot/sandbox/rustyhashes/: HashCorrectnessTest.java
