[package]
name = "rustyhashing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# https://github.com/johnthagen/min-sized-rust
#strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
lto = false  # Link-time optimization.

[dependencies]
jni = "0.21.0"
ring = "0.16.20"
log = "0.4.17"